--- a/index.html
+++ b/index.html
@@ -451,24 +451,45 @@
                     <!-- //box -->
 
                     <!-- box -->
-                    <!-- <section class="color-shape reference">
-                        <a href="refer-effect/index.html" target="_blank">
+                    <section class="color-shape reference">
+                        <a href="site-react/index/index.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
-                                    <span class="overlay-img-donut">EFFECT</span>
-                                    <span class="overlay-text-thumb-donut">이펙트</span>
-                                    <span class="overlay-text-thumb1-donut">이펙트</span>
-                                    <span class="overlay-text-thumb2-donut">EFFECT</span>
+                                    <span class="overlay-img-donut">REACT</span>
+                                    <span class="overlay-text-thumb-donut">리액트</span>
+                                    <span class="overlay-text-thumb1-donut">리액트</span>
+                                    <span class="overlay-text-thumb2-donut">REACT</span>
                                 </div>
-                                <img src="assets/img/svg-carrot.svg" alt="portfolio">
+                                <img src="assets/img/svg-pizza.svg" alt="portfolio">
                                 <div class="img-text donutImg">
-                                    <h5>EFFECT</h5>
-                                    <p>이펙트</p>
-                                    <span>EFFECT</span>
+                                    <h5>REACT</h5>
+                                    <p>리액트</p>
+                                    <span>REACT</span>
                                 </div>
                             </div>
                         </a> 
-                    </section> -->
+                    </section>
+                    <!-- //box -->
+
+                    <!-- box -->
+                    <section class="color-shape reference">
+                        <a href="site-react/main2.html" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">REACT SITE</span>
+                                    <span class="overlay-text-thumb-donut">리액트 사이트</span>
+                                    <span class="overlay-text-thumb1-donut">리액트 사이트</span>
+                                    <span class="overlay-text-thumb2-donut">REACT SITE</span>
+                                </div>
+                                <img src="assets/img/svg-pear.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>REACT SITE</h5>
+                                    <p>리액트 사이트</p>
+                                    <span>REACT SITE</span>
+                                </div>
+                            </div>
+                        </a> 
+                    </section>
                     <!-- //box -->
                     
                     <!-- box -->
@@ -617,48 +638,6 @@
                         </a> 
                     </section>
                     <!-- //box -->
-                    
-                    <!-- box -->
-                    <section class="color-shape reference">
-                        <a href="http://vefy21.dothome.co.kr/" target="_blank">
-                            <div class="image-wrap">
-                                <div class="hover-wrap">
-                                    <span class="overlay-img-donut">TEAM PROJECT</span>
-                                    <span class="overlay-text-thumb-donut">베피</span>
-                                    <span class="overlay-text-thumb1-donut">베피</span>
-                                    <span class="overlay-text-thumb2-donut">TEAM PROJECT</span>
-                                </div>
-                                <img src="assets/img/svg-strawberry-magnum.svg" alt="portfolio">
-                                <div class="img-text donutImg">
-                                    <h5>TEAM PROJECT</h5>
-                                    <p>베피</p>
-                                    <span>TEAM PROJECT</span>
-                                </div>
-                            </div>
-                        </a> 
-                    </section>
-                    <!-- //box -->
-
-                    <!-- box -->
-                    <!-- <section class="color-shape reference">
-                        <a href="https://github.com/KDONG1224/dothome21/tree/main/vefy" target="_blank">
-                            <div class="image-wrap">
-                                <div class="hover-wrap">
-                                    <span class="overlay-img-donut">PROJECT SOURCE</span>
-                                    <span class="overlay-text-thumb-donut">베피 소스보기</span>
-                                    <span class="overlay-text-thumb1-donut">베피 소스보기</span>
-                                    <span class="overlay-text-thumb2-donut">PROJECT SOURCE</span>
-                                </div>
-                                <img src="assets/img/svg-vanilla-cupcake.svg" alt="portfolio">
-                                <div class="img-text donutImg">
-                                    <h5>PROJECT SOURCE</h5>
-                                    <p>베피 소스보기</p>
-                                    <span>PROJECT SOURCE</span>
-                                </div>
-                            </div>
-                        </a> 
-                    </section> -->
-                    <!-- //box -->
 
                     <!-- box -->
                     <section class="color-shape reference figma">
@@ -766,6 +745,48 @@
                     <!-- //box -->
 
                     <!-- box -->
+                    <!-- <section class="color-shape reference">
+                        <a href="http://vefy21.dothome.co.kr/" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">TEAM PROJECT</span>
+                                    <span class="overlay-text-thumb-donut">베피</span>
+                                    <span class="overlay-text-thumb1-donut">베피</span>
+                                    <span class="overlay-text-thumb2-donut">TEAM PROJECT</span>
+                                </div>
+                                <img src="assets/img/svg-strawberry-magnum.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>TEAM PROJECT</h5>
+                                    <p>베피</p>
+                                    <span>TEAM PROJECT</span>
+                                </div>
+                            </div>
+                        </a> 
+                    </section> -->
+                    <!-- //box -->
+
+                    <!-- box -->
+                    <!-- <section class="color-shape reference">
+                        <a href="https://github.com/KDONG1224/dothome21/tree/main/vefy" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">PROJECT SOURCE</span>
+                                    <span class="overlay-text-thumb-donut">베피 소스보기</span>
+                                    <span class="overlay-text-thumb1-donut">베피 소스보기</span>
+                                    <span class="overlay-text-thumb2-donut">PROJECT SOURCE</span>
+                                </div>
+                                <img src="assets/img/svg-vanilla-cupcake.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>PROJECT SOURCE</h5>
+                                    <p>베피 소스보기</p>
+                                    <span>PROJECT SOURCE</span>
+                                </div>
+                            </div>
+                        </a> 
+                    </section> -->
+                    <!-- //box -->
+
+                    <!-- box -->
                     <section class="color-shape reference">
                         <a href="refer-effect/gameEffect/tetris/tetris.html" target="_blank">
                             <div class="image-wrap">
@@ -808,7 +829,7 @@
                     <!-- //box -->
 
                     <!-- box -->
-                    <!-- <section class="color-shape reference">
+                    <section class="color-shape reference">
                         <a href="illustrator/index.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
@@ -817,7 +838,7 @@
                                     <span class="overlay-text-thumb1-donut">일러스트레이터</span>
                                     <span class="overlay-text-thumb2-donut">Illustrator</span>
                                 </div>
-                                <img src="assets/img/svg-cookie.svg" alt="portfolio">
+                                <img src="assets/img/svg-french-fries.svg" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>Illustrator</h5>
                                     <p>일러스트레이터</p>
@@ -825,7 +846,7 @@
                                 </div>
                             </div>
                         </a> 
-                    </section> -->
+                    </section>
                     <!-- //box -->
 
                     <!-- box -->
