--- a/refer-effect/gameEffect/cardGame.html
+++ b/refer-effect/gameEffect/cardGame.html
@@ -77,8 +77,45 @@
 
         /* success */
         .success {
+            position: fixed;
+            left: 0; top: 0;
+            width: 100%;
+            height: 100vh;
+            backdrop-filter: blur(10px);
+            background: rgba(0,0,0,.2);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            z-index: 1000;
             display: none;
         }
+        .success h2 {
+            font-family: 'CookieRunOTF-Bold';
+            font-size: 6vw;
+            color: #fff;
+            margin-bottom: 20px;
+        }
+        .success .btn-continue {
+            font-family: 'CookieRun-Regular';
+            font-size: 2vw;
+            background: #000;
+            border: 0;
+            color: #fff;
+            padding: 1vw 4vw;
+            margin: 1vw;
+            cursor: pointer;
+            border-radius: 30px;
+            transition: all .3s;
+        }
+        .success .btn-continue:hover {
+            background: #fff;
+            color: #000;
+        }
+        .success.is-visible {
+            display: flex;
+        }
+
         /* card */
         .cardWrap {
             display: grid;
@@ -99,9 +136,24 @@
             transition: all 0.6s;
             cursor: pointer;
         }
-        .cardWrap .card:hover {
+        /* .cardWrap .card:hover {
+            transform: rotateY(-180deg);
+        } */
+        /* 카드를 클릭했을 때 */
+        .card.is-selected {
             transform: rotateY(-180deg);
         }
+
+        /* 카드가 맞췄을 경우 */
+        .card[data-matched=true] {
+            animation: matchSuccess 0.4s ease-out 3 forwards;
+        }
+        @keyframes matchSuccess {
+            0%   {transform: rotateY(-180deg) scale(1);}
+            50%  {transform: rotateY(-180deg) scale(1.05);}
+            100% {transform: rotateY(-180deg) scale(1);}
+        }
+
         .cardWrap .card > div {
             position: absolute;
             left: 0; top: 0;
@@ -162,7 +214,7 @@
                 <!-- <i class="fa fa-volume-up" aria-hidden="true"></i> -->
                 <i class="fa fa-volume-off" aria-hidden="true"></i>
             </span>
-            <audio id="theme-song" src="../assets/audio/bg02.mp3" loop="loop" alt="[무료비트 Freebeat] 코드쿤스트 X 팔로알토 X 스윙스 X 원슈타인 타입 감성 비트 'REST' (Prod. BENIGN)"></audio>
+            <audio id="theme-song" src="../assets/audio/bg.mp3" loop="loop" alt="[무료비트]쇼미더머니 10 지원하기 좋은 피아노 랩비트  ASAP  (Prod. COLDE$T)"></audio>
         </article>
         <!-- //audio -->
 
@@ -170,7 +222,7 @@
         <article class="title">
             <h1>카드 뒤집기 게임</h1>
             <div class="score">
-                <p class="truns">기회 : <span>5</span>번</p>
+                <p class="turns">기회 : <span>5</span>번</p>
                 <p class="attempts">시도 : <span>0</span></p>
                 <p class="wins">우승 : <span>0</span></p>
             </div>
@@ -179,87 +231,87 @@
 
         <!-- success -->
         <div class="success">
-            <h2 class="msg">GOOOOODD!!! 상위급 실력이네요~~</h2>
+            <h2 class="msg">GOOOD!!! 상위급 실력이네요~~</h2>
             <div class="score core">
-                <p class="truns">기회 : <span>5</span>번</p>
+                <p class="turns">기회 : <span>5</span>번</p>
                 <p class="attempts">시도 : <span>0</span></p>
                 <p class="wins">우승 : <span>0</span></p>
             </div>
-            <button class="class-continue">다시 도전하기</button>
+            <button class="btn-continue">다시 도전하기</button>
         </div>
         <!-- //success -->
 
         <!-- cardWrap -->
         <section class="cardWrap">
-            <div class="card" data-type="img1">
+            <div class="card" data-type="img1" data-matched="false">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
-            <div class="card" data-type="img1">
+            <div class="card" data-type="img1" data-matched="false">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
-            <div class="card" data-type="img2">
+            <div class="card" data-type="img2" data-matched="false">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
-            <div class="card" data-type="img2">
+            <div class="card" data-type="img2" data-matched="false">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
-            <div class="card" data-type="img3">
+            <div class="card" data-type="img3" data-matched="false">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
-            <div class="card" data-type="img3">
+            <div class="card" data-type="img3" data-matched="false">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
-            <div class="card" data-type="img4">
+            <div class="card" data-type="img4" data-matched="false">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
-            <div class="card" data-type="img4">
+            <div class="card" data-type="img4" data-matched="false">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
-            <div class="card" data-type="img5">
+            <div class="card" data-type="img5" data-matched="false">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
-            <div class="card" data-type="img5">
+            <div class="card" data-type="img5" data-matched="false">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
-            <div class="card" data-type="img6">
+            <div class="card" data-type="img6" data-matched="false">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
-            <div class="card" data-type="img6">
+            <div class="card" data-type="img6" data-matched="false">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
-            <div class="card" data-type="img7">
+            <div class="card" data-type="img7" data-matched="false">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
-            <div class="card" data-type="img7">
+            <div class="card" data-type="img7" data-matched="false">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
-            <div class="card" data-type="img8">
+            <div class="card" data-type="img8" data-matched="false">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
-            <div class="card" data-type="img8">
+            <div class="card" data-type="img8" data-matched="false">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
-            <div class="card" data-type="img9">
+            <div class="card" data-type="img9" data-matched="false">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
-            <div class="card" data-type="img9">
+            <div class="card" data-type="img9" data-matched="false">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
@@ -270,10 +322,23 @@
     <!-- script -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>
+        const $cardWrap = $(".cardWrap");
+        const $card = $(".card");
         const $btnSound = $(".btn-sound");
         const $themeSong = $("#theme-song")[0];
+        const $success = $(".success");
+        const $successMsg = $(".success .msg");
+        const $btnContinue = $(".btn-continue");
+        const $turns = $(".turns span");
+        const $wins = $(".wins span");
+        const $attempts = $(".attempts span");
+
         const dataType = "data-type";
+        const dataMatch = "data-matched";
         const selectedClass = "is-selected";
+        const playSoundClass = "is-playing";
+        const visibleClass = "is-visible";
+        const timeoutLength = 900;
 
         let sound = [
             "../assets/audio/dingdong.mp3",
@@ -281,7 +346,11 @@
             "../assets/audio/up.mp3"],
             soundMatch = new Audio(sound[0]),
             soundNoMatch = new Audio(sound[1]),
-            soundSuccess = new Audio(sound[2]);
+            soundSuccess = new Audio(sound[2]),
+            turnsCount = 5, //기회 횟수
+            attemptsCount = 0, //시도횟수
+            winsCount = 0,   //우승 횟수
+            card1, card2, msg;
 
         // audio 버튼을 클릭하면 꺼지고 클릭하면 켜지게 하기
         $btnSound.on("click", function(){
@@ -302,6 +371,132 @@
             // }
             $(this).find("i").toggleClass("fa-volume-up fa-volume-off");
         });
+
+        // 카드를 클릭하면 is-selected를 추가
+        $card.click(function(){
+            // dataMatched == false이면 클릭한 카드에 is-selected 추가
+            if($(this).attr(dataMatch) == "false"){
+                $(this).addClass(selectedClass);
+            };
+
+            let seletedCards = $("."+selectedClass);
+            // 만약에 카드1와 카드2가 같다면 dataMatched를 true로 
+            if(seletedCards.length == 2){
+                card1 = seletedCards.eq(0).attr(dataType);
+                card2 = seletedCards.eq(1).attr(dataType);
+
+                if(card1 == card2){
+                    // 만약에 카드1과 카드2가 같으면 dataMatched -> true / 음악재생(정답)
+                    seletedCards.attr(dataMatch, true).removeClass(selectedClass);
+
+                    // 성공 음악 재생
+                    if($btnSound.hasClass(playSoundClass)){
+                        soundMatch.play();
+                    }
+                } else {
+                    // 실패 음악 재생
+                    if($btnSound.hasClass(playSoundClass)){
+                        soundNoMatch.play();
+                    }
+
+                    // 만약에 카드1과 카드2가 같지않으면 dataMatched -> 그대로 / 음악재생(오답) / 기회를 - 로
+                    setTimeout(function(){
+                        turnsCount--;
+                        $turns.html(turnsCount);
+                        seletedCards.removeClass(selectedClass);
+                    }, timeoutLength);
+
+                    // 기회가 없을 때 시도+1, 기회+5
+                    if(turnsCount <= 0){
+                        turnsCount = 6;
+                        attemptsCount++;
+                        $attempts.html(attemptsCount);
+                        $card.attr(dataMatch, false); // 모든 카드 초기화
+                    }
+                }
+            }
+
+            // 카드를 완성 했을 때
+            // dataMatched의 true 갯수 == 전체 카드 갯수 : 성공 음악 추가, 우승+1, 성공 메세지
+
+            // $('['+dataMatch+'="true"]').length;
+            if ($('['+dataMatch+'="true"]').length == $card.length) {
+                setTimeout(function(){
+                    // 성공 메세지
+                    $success.addClass(visibleClass);
+
+                    // 성공 음악 추가
+                    if($btnSound.hasClass(playSoundClass)){
+                        soundSuccess.play();
+                    };
+                }, timeoutLength);
+                
+                // 완성 메세지
+                switch(attemptsCount){
+                    case 0 :
+                        msg = "레벨1... 최고의 실력입니다!!";
+                        break;
+                    case 1 :
+                        msg = "레벨2... 그럭저럭 하네요~~";
+                        break;
+                    case 2 :
+                        msg = "레벨3... 평범하네요~~";
+                        break;
+                    case 3 :
+                        msg = "레벨4... 다행이네요~~~";
+                        break;
+                    default : 
+                        msg = "^n^";
+                }
+                $successMsg.text(msg);
+            }
+
+            // 게임 다시 시작할때
+            $btnContinue.on("click", function(){
+                $success.removeClass(visibleClass);
+                shuffleCards();
+                turnsCount = 5;
+                attemptsCount = 0;
+                $attempts.html(attemptsCount);
+                $turns.html(turnsCount);
+            })
+        });
+
+        // 카드 섞기
+        function shuffleCards(){
+            $card.attr(dataMatch, false);
+
+            // var num = [1,2,3,4,5,6,7,8,9];
+            // for(
+            //     var remove = num.splice(3,1)
+            //     var remove = num.splice(4,1)
+            //     var remove = num.splice(1,1)
+            //     var remove = num.splice(6,1)
+            //     var remove = num.splice(8,1)
+            //     var remove = num.splice(2,1)
+            //     var remove = num.splice(5,1)
+            //     var remove = num.splice(7,1)
+            //     var remove = num.splice(0,1)
+            // )
+
+            // 하나씩 선택해서 splice로 뽑아낸 뒤 append로 넣어 주면 된다.
+            let cards = $cardWrap.children();
+            for(let i=0; i<=cards.length; i++){
+                $cardWrap.append(cards.splice(Math.floor(Math.random() * cards.length), 1)[0])
+            }
+
+            $card.each(function(index){
+                setTimeout(() => {
+                    $(this).addClass(selectedClass)
+                }, 200 * index);
+            });
+
+            setTimeout(() => {
+                $card.removeClass(selectedClass);
+            }, 4000)
+        };
+        // 카드 섞기 및 시작하기
+        shuffleCards()
     </script>
 </body>
 </html>
