--- a/site-react/index.html
+++ b/site-react/index.html
@@ -10,18 +10,18 @@
         content="크동, 웹 퍼블리셔, 웹 표준, 웹 접근성, 화려한 디자인, webstoryboy, publisher, css3, html, markup, design, Webstoryboy">
     <title>크동 | KDONG | REACT</title>
     <!-- Bootstrap core CSS -->
-    <link href="./css/bootstrap.css" rel="stylesheet">
-    <link href="./css/docs.min.css" rel="stylesheet">
-    <link href="./css/prism.css" rel="stylesheet">
+    <link href="../assets/css/bootstrap.css" rel="stylesheet">
+    <link href="../assets/css/docs.min.css" rel="stylesheet">
+    <link href="../assets/css/prism.css" rel="stylesheet">
     <!-- 파비콘 -->
-    <link rel="shortcut icon" href="/assets/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" href="/assets/ico/favicon_114.png">
-    <link rel="icon" href="/assets/ico/icon.png">
-    <link rel="icon" href="/assets/ico/favicon_57.png" sizes="16x16">
-    <link rel="icon" href="/assets/ico/favicon_72.png" sizes="32x32">
-    <link rel="icon" href="/assets/ico/favicon_114.png" sizes="48x48">
-    <link rel="icon" href="/assets/ico/favicon_114.png" sizes="64x64">
-    <link rel="icon" href="/assets/ico/favicon_114.png" sizes="128x128">
+    <link rel="shortcut icon" href="../assets/ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" href="../assets/ico/favicon_114.png">
+    <link rel="icon" href="../assets/ico/icon.png">
+    <link rel="icon" href="../assets/ico/favicon_57.png" sizes="16x16">
+    <link rel="icon" href="../assets/ico/favicon_72.png" sizes="32x32">
+    <link rel="icon" href="../assets/ico/favicon_114.png" sizes="48x48">
+    <link rel="icon" href="../assets/ico/favicon_114.png" sizes="64x64">
+    <link rel="icon" href="../assets/ico/favicon_114.png" sizes="128x128">
     <!-- Facebook meta tags -->
     <meta property="og:type" content="article" />
     <meta property="og:title" content="크동" />
@@ -373,10 +373,10 @@ found 36 vulnerabilities (11 moderate, 24 high, 1 critical)
     </footer>
     <!-- //Footer -->
     <!-- Bootstrap core JavaScript -->
-    <script src="/assets/js/jquery-1.9.1.min.js"></script>
-    <script src="/assets/js/bootstrap.min.js"></script>
-    <script src="/assets/js/docs.min.js"></script>
-    <script src="/assets/js/prism.js"></script>
+    <script src="../assets/js/jquery-1.9.1.min.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/docs.min.js"></script>
+    <script src="../assets/js/prism.js"></script>
     
 </body>
 
