--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 
                     <!-- box -->
                     <section class="color-shape reference">
-                        <a href="site-react/index/index.html" target="_blank">
+                        <a href="site-react/index.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
                                     <span class="overlay-img-donut">REACT</span>
