--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     <!-- contents_tit -->
     <div id="contents_tit">
         <div class="titt">
-            <p><a href="#" class="tit_btn">&quot;Hello! 프론트앤드를 꿈꾸는 나는 강동재&quot;</a></p>
+            <p><a href="#" class="tit_btn">&quot;Hello! 프론트 엔드를 꿈꾸는 나는 강동재&quot;</a></p>
         </div>
     </div>
     <!-- //contents_tit -->
