--- a/refer-effect/parallaxEffext/parallaxapple.html
+++ b/refer-effect/parallaxEffext/parallaxapple.html
@@ -409,15 +409,15 @@
                     data-27000="background: navy; color: white; transform: rotate(-2deg) translateX(-2vw) skew(5deg) scale(2.2);"
                     data-27500="background: white; color: black; transform: rotate(0deg) translateX(0vw) skew(0deg) scale(1);"
                 >s</span><span class="s2"
-                    data-26500="background: black; color: MintCream; transform: rotate(-10deg) translateX(-10vw) skew(20deg) scale(3);"
+                    data-26500="background: black; color: MintCream;"
                     data-27000="background: black; color: white;"
                     data-27500="background: black; color: white;"
                 >c</span><span class="s3"
                     data-27000="background: black; color: white;"
-                    data-27500="background: black; color: white;"
-                    data-28000="background: yellow; color: black;"
+                    data-27500="background: yellow; color: navy;"
+                    data-28000="background: blue; color: black;"
                 >r</span><span class="s4"
-                    data-27500="background: yellow; color: black;"
+                    data-27500="background: red; color: black;"
                     data-28000="background: yellow; color: black;"
                     data-28500="background: black; color: white;"
                 >i</span><span class="s5"
